--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -92,7 +92,7 @@ jobs:
           GIT_AUTHOR_EMAIL: 30546982+holomekc@users.noreply.github.com
           GIT_COMMITTER_NAME: holomekc
           GIT_COMMITTER_EMAIL: 30546982+holomekc@users.noreply.github.com
-          GH_TOKEN: ${{ github.token }}
+          GH_TOKEN: ${{ secrets.SEMANTIC_RELEASE_TOKEN }}
         run: |
           yarn run release
 
@@ -101,7 +101,7 @@ jobs:
         shell: bash
         if: steps.release.outputs.version != ''
         env:
-          GH_TOKEN: ${{ github.token }}
+          GH_TOKEN: ${{ secrets.SEMANTIC_RELEASE_TOKEN }}
         run: |
           #!/bin/bash
           gh api \
