--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -36,7 +36,7 @@ verifyRelease:
 prepare:
   - path: './semantic-release/changelog'
   - path: './semantic-release/iobroker'
-  - path: 'semantic-release-yarn'
+  - path: '@semantic-release/npm'
   - path: '@semantic-release/git'
     assets:
       - "README.md"
